--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,11 +10,12 @@ builds:
     - darwin
   goarch:
     - amd64
-archive:
-  format: zip
-  name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
-  replacements:
-    amd64: x86_64
+archives:
+  -
+    format: zip
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+    replacements:
+      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
